// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/brand_image_setting/UploadButton should match snapshot 1`] = `
<button
  className="btn btn-primary"
  disabled={false}
  id="upload-button"
  onClick={[Function]}
  type="button"
>
  <LoadingWrapper
    loading={false}
    text="Uploading..."
  >
    Upload
  </LoadingWrapper>
</button>
`;

exports[`components/admin_console/brand_image_setting/UploadButton should match snapshot 2`] = `
<button
  className="btn btn-primary"
  disabled={false}
  id="upload-button"
  onClick={[Function]}
  type="button"
>
  <LoadingWrapper
    loading={true}
    text="Uploading..."
  >
    Upload
  </LoadingWrapper>
</button>
`;

exports[`components/admin_console/brand_image_setting/UploadButton should match snapshot 3`] = `
<button
  className="btn btn-primary"
  disabled={false}
  id="upload-button"
  onClick={[Function]}
  type="button"
>
  <LoadingWrapper
    loading={false}
    text="Uploading..."
  >
    <SuccessIcon
      key="icon"
    />
     
    Uploaded!
  </LoadingWrapper>
</button>
`;

exports[`components/admin_console/brand_image_setting/UploadButton should match snapshot 4`] = `
<button
  className="btn btn-primary"
  disabled={true}
  id="upload-button"
  onClick={[Function]}
  type="button"
>
  <LoadingWrapper
    loading={false}
    text="Uploading..."
  >
    <SuccessIcon
      key="icon"
    />
     
    Uploaded!
  </LoadingWrapper>
</button>
`;
